<resources>
    <string name="app_name">Room</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_notes">Notas</string>
    <string name="title_favorites">Favoritas</string>
    <string name="title_users">Usuarios</string>
    <string name="title">Titulo</string>
    <string name="content">Cotenido</string>
    <string name="favorite">¿La nota es favorita?</string>
    <string name="entrar">Entrar</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="mynotes">MyNotes</string>
    <string name="registrarme">Registrarme</string>
    <string name="register">Registrar</string>
    <string name="registro">Registro</string>
    <string name="editFavorite">¿Es favorita?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
