<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.room.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.room.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.room.ui.users.UserFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users" />

</navigation>