<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dieciseis_dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/cien_dp"
            android:layout_height="@dimen/cien_dp"
            android:layout_marginTop="@dimen/dieciseis_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_checklist" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/ocho_dp"
            android:layout_marginTop="@dimen/ocho_dp"
            android:layout_marginEnd="@dimen/ocho_dp"
            android:text="@string/mynotes"
            android:textColor="@android:color/white"
            android:textSize="@dimen/treinta_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="@dimen/cero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/treintaydos_dp"
            android:ems="10"
            android:hint="@string/email"
            android:background="@drawable/style_edit_text"
            android:inputType="textEmailAddress"
            android:padding="@dimen/ocho_dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="@dimen/cero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ocho_dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:background="@drawable/style_edit_text"
            android:inputType="textPassword"
            android:padding="@dimen/ocho_dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="@dimen/cero_dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cincuenta_dp"
            android:layout_marginRight="@dimen/cincuenta_dp"
            android:layout_marginTop="@dimen/ochenta_dp"
            android:background="@drawable/style_buttons"
            android:text="@string/entrar"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/ic_facebook_logo_button" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/treintayocho_dp"
            android:layout_marginBottom="@dimen/ocho_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:srcCompat="@drawable/ic_social_instagram_circle" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/treintaydos_dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:srcCompat="@drawable/ic_twitter" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/cero_dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/registrarme"
            android:layout_marginLeft="@dimen/cincuenta_dp"
            android:layout_marginRight="@dimen/cincuenta_dp"
            android:background="@drawable/style_buttons"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>